<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_info">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_shop_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/brown"
            app:menu="@menu/top_app_bar_card_info"
            app:title="Сведения о карте"
            app:titleTextColor="@color/brownToolBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/card_shop_name"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/card_name"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246">

        <ImageView
            android:id="@+id/card_view_image_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/metro_card_image"
            app:cardUseCompatPadding="false" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_card_info"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="9dp"
        android:text="@string/title_card_number"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/card_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <TextView
        android:id="@+id/card_number"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="296dp"
        android:text="@string/card_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_card_info" />

    <Button
        android:id="@+id/button_use_card"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/use_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="33dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number" />


</androidx.constraintlayout.widget.ConstraintLayout>